- added contributions to README

--- a/README
+++ b/README
@@ -7,7 +7,7 @@ Contents
 ========
  - Purpose and History
  - Copyright
- - Authors
+ - Authors and Maintainers
  - Installation
  - Documentation
  - Release notes
@@ -15,14 +15,16 @@ Contents
 
 Purpose and History
 ===================
-MiXiM (mixed simulator) is a simulator for wireless and mobile networks 
-using the OMNeT++ simulation engine.
+MiXiM (mixed simulator) is a simulator for wireless and mobile networks using 
+the OMNeT++ simulation engine.
 MiXiM is available at http://mixim.sourceforge.net/
 
-MiXiM is the attempt to merge several OMNeT++ simulators written to support
-mobile and wireless simulations.
+MiXiM is a simulation framework for the OMNeT++ simulation engine to support 
+modeling and simulation of wireless and mobile networks.
 
-Those prdecessors of MiXiM are:
+
+The initial MiXiM version has been a merger of the following 4 simulation 
+frameworks:
 - ChSim
   http://www.cs.uni-paderborn.de/en/fachgebiete/research-group-computer-networks/projects/chsim.html
   (c) by Universitaet Paderborn
@@ -36,10 +38,50 @@ Those prdecessors of MiXiM are:
   http://www.consensus.tudelft.nl/software.html
   (c) by Technische Universiteit Delft
 
-MiXiM further includes the "Mixnet" project which provides compatibility modules
-and documentation in case you want to use MiXiM together with the INET
-framework. For details on Mixnet and INET please take a look at its README file
-in MiXiM's "inet" folder.
+Meanwhile many other models and projects have been integrated into MiXiM, the 
+most important being:
+
+- EnergyFramework (since MiXiM v1.1)
+  http://www.sics.se/nets/software
+  (c) Swedish Institute of Computer Science (SICS)
+  written by Laura Marie Feeney (lmfeeney@sics.se)
+  
+- CSMA module (since MiXiM v1.2)
+  (c) by Jerome Rousselot (jerome.rousselot@csem.ch)
+  
+- IEEE 802.15.4 and IEEE 802.15.4A modules (since MiXiM v1.2)
+  (c) by Jerome Rousselot (jerome.rousselot@csem.ch)
+ 
+- B-MAC layer (since MiXiM v2.1)
+  http://linux3.dti.supsi.ch/~afoerste/downloads.html
+  (c) by Anna Foerster (anna.foerster@ieee.org)
+  
+- MoBAN - Mobility Model for Body Area Networks (since MiXiM v2.1)
+  http://www.es.ele.tue.nl/nes/content/models.php
+  (c) by Majid Nabi (m.nabi@tue.nl)
+  
+- Flooding network layer (since MiXiM v2.1)
+  (c) by Daniel Willkomm (willkomm@tkn.tu-berlin.de)
+  and ported to MiXiM by Theodoros Kapourniotis (kapourniotis@gmail.com)
+  
+- WiseRoute network layer (since MiXiM v2.1)
+  (c) by Damien Piguet, Jerome Rousselot (jerome.rousselot@csem.ch)
+  and ported to MiXiM by Theodoros Kapourniotis (kapourniotis@gmail.com)
+   
+- ProbabilityBroadcast network layer modules (since MiXiM v2.1)
+  (c) by Jerome Rousselot (jerome.rousselot@csem.ch)
+  
+- Analogue Models: BreakpointPathlossModel and PERModel (since MiXiM v2.1)
+  (c) by Jerome Rousselot (jerome.rousselot@csem.ch)
+
+
+
+MiXiM further includes the "Mixnet" (since MiXiM v2.0) project which provides 
+compatibility modules and documentation for using MiXiM together with the INET 
+framework. 
+For details on Mixnet and INET please take a look at the README file in MiXiM's 
+"inet" folder.
+
 
 Copyright
 =========
@@ -71,17 +113,37 @@ Copyright (C) 2007
     just as you do if you cite a scientific work.
 
 
-Authors
-=======
-The current authors and maintainers of MiXiM are
+Authors and Maintainers
+=======================
+The main authors of MiXiM are (in alphabetic order)
 - Andreas Koepke, TUB (koepke@tkn.tu-berlin.de)
 - Hermann S. Lichte, UPB (hermann.lichte@uni-paderborn.de)
 - Tom Parker, TUD (t.e.v.parker@tudelft.nl)
+- Jerome Rousselot, CSEM SA (jerome.rousselot@csem.ch)
 - Michael Swigulski, TUB (swigulski@tkn.tu-berlin.de)
 - Stefan Valentin, UPB (stefan.valentin@upb.de)
 - Otto Visser, TUD (o.w.visser@tudelft.nl)
 - Karl Wessel, TUB (wessel@tkn.tu-berlin.de)
 - Daniel Willkomm, TUB (willkomm@tkn.tu-berlin.de)
+
+From 2007 (MiXiM v0.1) until 2011 (MiXiM v2.1) MiXiM has been officially 
+maintained and developed by the Telecommunication Networks Group of the 
+Technische Universitaet Berlin (TUB), in particular by
+- Michael Swigulski, TUB (swigulski@tkn.tu-berlin.de)
+- Karl Wessel, TUB (wessel@tkn.tu-berlin.de)
+- Daniel Willkomm, TUB (willkomm@tkn.tu-berlin.de)
+
+
+Contributors
+============
+There have been many contributors adding code, bug reports and bug-fixes to 
+MiXiM. Specifically we would like to mention:
+- Laura Marie Feeney     
+- Anna Foerster           
+- Theodoros Kapourniotis 
+- Michael Lindig
+- Majid Nabi             
+- Jerome Rousselot       
 
 
 Installation
@@ -97,17 +159,17 @@ http://sourceforge.net/apps/trac/mixim/wiki/StepByStep
 MiXiM contains wizards for the project-creation-wizard in the OMNeT++ IDE.
 These are:
 * a wizard to create a basic MiXiM-network by configuring the hosts from
-predefines application layers, NIC protocols and mobility modules as well
-as choosing the playground topology.
+predefines application layers, NIC protocols and mobility modules as well as 
+choosing the playground topology.
 * a wizard to create a simple MiXiM-network. The hosts contain an analogue model
-which can be basically configured in the wizard. This network is useful
-to implement and test a new analogue model.
+which can be basically configured in the wizard. This network is useful to 
+implement and test a new analogue model.
 
 To create a new project using MiXiM's wizards please go to:
 "File -> New -> OMNeT++ Project...", name your project, and in the next step
 select the wizard to be used. It will present the configuration options
-during the next step(s). When the creation process has finished,
-the new MiXiM-network is ready to be built and run.
+during the next step(s). When the creation process has finished, the new 
+MiXiM-network is ready to be built and run.
 
 
 Documentation
@@ -124,6 +186,7 @@ see http://www.omnetpp.org/external/maillist.php for details.
 Release Notes
 =============
 
-See following site for notes on what changed with each release (beginning with 1.2):
+See following site for notes on what changed with each release (beginning 
+with 1.2):
 
 http://sourceforge.net/apps/trac/mixim/wiki/WhatChanged
